--- a/Orchard-dev/src/Orchard.Tests.Modules/Orchard.Tests.Modules.csproj
+++ b/Orchard-dev/src/Orchard.Tests.Modules/Orchard.Tests.Modules.csproj
@@ -199,6 +199,7 @@
     <Compile Include="CodeGeneration\Commands\CodeGenerationCommandsTests.cs" />
     <Compile Include="Comments\Services\CommentServiceTests.cs" />
     <Compile Include="DesignerTools\Services\ObjectDumperTests.cs" />
+    <Compile Include="Email\Class1.cs" />
     <Compile Include="Email\EmailChannelTests.cs" />
     <Compile Include="ImageProcessing\ImageProcessingTests.cs" />
     <Compile Include="ImportExport\Services\ImportExportServiceTests.cs" />
